syntax = "proto3";

package albums;


option go_package = "loudy.albumsv1;albumsv1";

service Albums{
    rpc CreateAlbum(CreateAlbumRequest) returns (CreateAlbumResponse);
    rpc Album(AlbumRequest) returns (AlbumResponse);
}
message AlbumRequest{
    string id = 1;
}
message AlbumResponse{
    AlbumData album = 1;
}
message AlbumData{
    string id = 1;
    string name = 2;
    string cover = 3;
    string release_date = 4;
    repeated ArtistLight artsits = 5;
    repeated TrackLight tracks = 6;
}
message CreateAlbumResponse{
    string id = 1;
}
message CreateAlbumRequest{
    string name = 1;
    repeated string artists_ids = 2;
    string cover = 3;
    string release_date = 4;
}

message ArtistLight{
    string id = 1;
    string name = 2;
}

message TrackLight{
    string id = 1;
    string name = 2;
}